# boss-zhipin-scraper

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  pyproject.toml  requirements.txt
scripts/: ai_screener.py  boss_auto_sender.py  boss_cdp_raw.py  citygroup.json  clean_jd_files.py  job_summary.py  review_server.py
tests/: test_chrome_setup.py  test_job_summary.py
