[project]
name = "boss-zhipin-scraper"
version = "2.0.0"
description = "BOSS直聘职位抓取工具 — Chrome CDP + API 明文薪资"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "eatmoreduck" }
]
keywords = ["zhipin", "boss", "scraper", "cdp", "jobs"]

dependencies = [
    "websocket-client>=1.6.0,<2.0.0",
    "requests>=2.28.0,<3.0.0",
]

[project.optional-dependencies]
csv = []
all = [
    "websocket-client>=1.6.0,<2.0.0",
    "requests>=2.28.0,<3.0.0",
]

[project.scripts]
boss-scraper = "boss_cdp_raw:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
